# example_poetry

./: README.md
poetry_venv/: pyproject.toml
poetry_venv/script/: hello.py
