[tool.poetry]
name = "poetry-venv"
version = "0.1.0"
description = ""
authors = ["ken imoto <k096906261.49@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_venv"}, { include="script" }]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "script.hello:main"
